<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgclr"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <View
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/shadow"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingStart="26dp"
            android:paddingEnd="26dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bottomDialog_icon"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginRight="20dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/bottomDialog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:text="@string/set_wallpapers"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_5sdp"
                android:visibility="visible"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/home_wallpaper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_round"
                    android:padding="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/set_wallpapers_home"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lock_wallpaper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/btn_round"
                    android:padding="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/set_wallpapers_lock"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_n_lock"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_round"
                    android:padding="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/screen_lock"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>





            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>