<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgclr"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ringtones"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical">


                    <TextView
                        android:id="@+id/ringseeall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_round"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/see_all"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewringtone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wallpapers"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical">


                    <TextView
                        android:id="@+id/wallpaperseeall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_round"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/see_all"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewwallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dailyfeed"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical">


                    <TextView
                        android:id="@+id/dailyfeedseeall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_round"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/see_all"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewdailyfeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>